kyverno-cli/_test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    app.kubernetes.io/name: test
